Update header & Footer Design

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
@@ -511,11 +511,11 @@
         </div>
     </section>
     <footer id="footer">
-        <div id="footer_top" class=" purple darken-3">
+        <div id="footer_top" class="" style="background-color: #300F3B;">
             <div class="container">
                 <div class="row py-5 text-white">
                     <div class="col-sm-4 col-md-4">
-                        <h5 class="title mb-4 font-bold">ABOUT MATERIAL DESIGN</h5>
+                        <h5 class="title mb-4 font-bold"><strong>About Material Design</strong></h5>
 
                         <p>Material Design (codenamed Quantum Paper) is a design language developed by Google.</p>
 
@@ -534,38 +534,37 @@
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-4">
-                        <h5 class="title mb-4 font-bold">Search something</h5>
-                        <form class="search-form" role="search">
-                            <div class="form-group waves-light waves-effect waves-light">
-                                <input type="text" class="form-control text-white" placeholder="Search">
-                            </div>
-                        </form>
-                        <p><i class="fa fa-home pr-1"></i> Bangladesh, BD +880</p>
-                        <p><i class="fa fa-envelope pr-1"></i>inf@gmail.com</p>
-                        <p><i class="fa fa-phone pr-1"></i> + 01 730 6890 68</p>
-                        <p><i class="fa fa-print pr-1"></i> + 01 674 0525 33</p>
-                    </div>
-                    <div class="col-sm-4 col-md-4">
-                        <h5 class="title mb-4 font-bold">Recent news</h5>
+                        <h5 class="title mb-4 font-bold"><strong>Recent news</strong></h5>
 
                         <ul class="footer-posts">
                             <li><a>Ut enim ad minim veniam nostrud.</a><span><p class="grey-text">09 October 2017</p></span></li>
                             <li><a>Duis aute dolor in reprehenderit.</a><span><p class="grey-text">09 October 2017</p></span></li>
                             <li><a>Excepteur sint occaecat cupidatat.</a><span><p class="grey-text">09 October 2017</p></span></li>
-                            <li><a>Sed perspiciatis unde omnis iste.</a><span><p class="grey-text">09 October 2017</p></span></li>
                         </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <h5 class="title mb-4 font-bold"><strong>Contact Us</strong></h5>
+                        <p><i class="fa fa-home pr-1"></i> Bangladesh, BD +880</p>
+                        <p><i class="fa fa-envelope pr-1"></i> inf@gmail.com</p>
+                        <p><i class="fa fa-phone pr-1"></i> (+8801) 730689068</p>
+                        <p><i class="fa fa-print pr-1"></i> (+8801) 674052533</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="footer_buttom" class="purple darken-4">
-            <div class="container">
-                <div class="row">
-                    <p class="mx-auto pt-2 text-white">&copy; 2017 Copyright by: <a href="#" class="text-white" color = "green"> Sazon Mahmud </a></p>
-                </div>
-            </div>
+
+        <!-- Copyright -->
+        <div class="text-center text-light p-2" style="background-color:#400F3B">
+        © 2021 Copyright:
+        <a class="text-light" href="https://blog.sazonmahmud.net/">Design by Sazon Mahmud</a>
         </div>
-    </footer>
+        <!-- Copyright -->
+        </footer>
+
+
+        
+
+
 
 
 
