Responsive for Mobile and Desktop Version

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
     <!--Main Navigation-->
 
     <!--Main Layout-->
-    <section id="mainbg">
-        <div class="container pb-5">
+    <section id="mainbg" class="py-5">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 d-none d-sm-block">
-                    <h1 class="text-center font-up font-bold mt-5 mb-3 pt-4">Transport</h1>
+                    <h1 class="text-center font-up font-bold mt-5 mb-3">Transport</h1>
                     <p class="text-center font-up font-bold mb-5">All the transport possibilities</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center pt-1">
+                <div class="col-lg-3 col-md-6 text-center pt-1 py-3">
                     <div class="icone align-items-center">
                         <div class="circle_icon d-flex align-items-center justify-content-center mx-auto">
                             <i class="fa fa-car fa-3x text-white" aria-hidden="true"></i>
@@ -110,7 +110,7 @@
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center pt-1">
+                <div class="col-lg-3 col-md-6 text-center pt-1 py-3">
                     <div class="icone align-items-center">
                         <div class="circle_icon d-flex align-items-center justify-content-center mx-auto">
                             <i class="fa fa-plane fa-3x text-white" aria-hidden="true"></i>
@@ -121,7 +121,7 @@
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center pt-1">
+                <div class="col-lg-3 col-md-6 text-center pt-1 py-3">
                     <div class="icone align-items-center">
                         <div class="circle_icon d-flex align-items-center justify-content-center mx-auto">
                             <i class="fa fa-train fa-3x text-white" aria-hidden="true"></i>
@@ -132,7 +132,7 @@
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center pt-1">
+                <div class="col-lg-3 col-md-6 text-center pt-1 py-3">
                     <div class="icone align-items-center">
                         <div class="circle_icon d-flex align-items-center justify-content-center mx-auto">
                             <i class="fa fa-ship fa-3x text-white" aria-hidden="true"></i>
@@ -336,7 +336,7 @@
                 </div>
             </div>
             <div class="row py-5">
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-3 my-2">
                     <div class="card text-center">
                         <div class="card-body">
                             <h1 class="mb-1 font-bold text-danger">+950</h1>
@@ -344,7 +344,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-3 my-2">
                     <div class="card text-center">
                         <div class="card-body">
                             <h1 class="mb-1 font-bold text-danger">+150</h1>
@@ -352,7 +352,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-3 my-2">
                     <div class="card text-center">
                         <div class="card-body">
                             <h1 class="mb-1 font-bold text-danger">+85</h1>
@@ -360,7 +360,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-3 my-2">
                     <div class="card text-center">
                         <div class="card-body">
                             <h1 class="mb-1 font-bold text-danger">+246</h1>
@@ -474,7 +474,7 @@
                             <li><a href="#" class="text-white">150 features</a></li>
                             <li><a href="#" class="text-white">200 members</a></li>
                         </ul>
-                        <div class="btn">Order Now</div>
+                        <div class="btn btn-dark p-2">Order Now</div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
@@ -489,7 +489,7 @@
                             <li><a href="#" class="text-white">350 features</a></li>
                             <li><a href="#" class="text-white">200 members</a></li>
                         </ul>
-                        <div class="btn">Order Now</div>
+                        <div class="btn btn-dark p-2">Order Now</div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
@@ -504,7 +504,7 @@
                             <li><a href="#" class="text-white">350 features</a></li>
                             <li><a href="#" class="text-white">200 members</a></li>
                         </ul>
-                        <a class="btn">Order Now</a>
+                        <a class="btn btn-dark p-2">Order Now</a>
                     </div>
                 </div>
             </div>
@@ -513,8 +513,8 @@
     <footer id="footer">
         <div id="footer_top" class="" style="background-color: #300F3B;">
             <div class="container">
-                <div class="row py-5 text-white">
-                    <div class="col-sm-4 col-md-4">
+                <div class="row py-4 text-white">
+                    <div class="col-sm-4 col-md-4 my-3">
                         <h5 class="title mb-4 font-bold"><strong>About Material Design</strong></h5>
 
                         <p>Material Design (codenamed Quantum Paper) is a design language developed by Google.</p>
@@ -533,7 +533,7 @@
 
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-4 col-md-4 my-3">
                         <h5 class="title mb-4 font-bold"><strong>Recent news</strong></h5>
 
                         <ul class="footer-posts">
@@ -542,7 +542,7 @@
                             <li><a>Excepteur sint occaecat cupidatat.</a><span><p class="grey-text">09 October 2017</p></span></li>
                         </ul>
                     </div>
-                    <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-4 col-md-4 my-3">
                         <h5 class="title mb-4 font-bold"><strong>Contact Us</strong></h5>
                         <p><i class="fa fa-home pr-1"></i> Bangladesh, BD +880</p>
                         <p><i class="fa fa-envelope pr-1"></i> inf@gmail.com</p>
