Update Contact Form

--- a/index.html
+++ b/index.html
@@ -260,30 +260,20 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <p class="h5 text-center mb-4"><a href="#form_sign" class="btn btn-deep-orange">Sign Up</a></p>
-                </div>
-            </div>
-
-            <div class="row">
                 <div class=" col-sm-6 col-md-6">
                     <form id="form_sign">
                         <!-- Form register -->
-                        <form>
-
-
+                        <form action="" method="post">
                             <div class="md-form">
                                 <i class="fa fa-user prefix"></i>
                                 <input type="text" id="orangeForm-name" class="form-control">
                                 <label for="orangeForm-name" class="mb-2">Your name</label>
                             </div>
-
                             <div class="md-form">
                                 <i class="fa fa-sign-out prefix"></i>
                                 <input type="text" id="orangeForm-email" class="form-control">
                                 <label for="orangeForm-email">Departure</label>
                             </div>
-
                             <div class="md-form">
                                 <i class="fa fa-file-o prefix"></i>
                                 <input type="password" id="orangeForm-pass" class="form-control">
@@ -296,19 +286,16 @@
                 <div class=" col-sm-6 col-md-6">
                     <!-- Form register -->
                     <form id="form_sign_in">
-
                         <div class="md-form">
                             <i class="fa fa-envelope prefix"></i>
                             <input type="text" id="orangeForm-email-02" class="form-control">
                             <label for="orangeForm-email-02">Your email</label>
                         </div>
-
                         <div class="md-form">
                             <i class="fa fa-sign-in prefix"></i>
                             <input type="text" id="orangeForm-name-02" class="form-control">
                             <label for="orangeForm-name-02">Arrival</label>
                         </div>
-
                         <div class="md-form">
                             <i class="fa fa-arrows prefix"></i>
                             <input type="password" id="orangeForm-pass-02" class="form-control">
